--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,6 @@
-tinydb~=4.7.0
+flake8==6.0.0
+mccabe==0.7.0
+pycodestyle==2.10.0
+pyflakes==3.0.1
+six @ file:///AppleInternal/BuildRoot/Library/Caches/com.apple.xbs/Sources/python3/python3-103/six-1.15.0-py2.py3-none-any.whl
+tinydb==4.7.0
