--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,10 @@
 flake8==6.0.0
+flake8-html==0.4.3
+Jinja2==3.1.2
+MarkupSafe==2.1.1
 mccabe==0.7.0
 pycodestyle==2.10.0
 pyflakes==3.0.1
+Pygments==2.14.0
 six @ file:///AppleInternal/BuildRoot/Library/Caches/com.apple.xbs/Sources/python3/python3-103/six-1.15.0-py2.py3-none-any.whl
 tinydb==4.7.0
