--- a/setup.cfg
+++ b/setup.cfg
@@ -1,3 +1,3 @@
 [flake8]
 max-line-length = 119
-exclude=.venv,.git,.tox,dist,doc,*openstack/common*,*lib/python*,*egg,build
+exclude=env,venv,.env,.venv,.git,.tox,dist,doc,*openstack/common*,*lib/python*,*egg,build
